syntax = "proto3";

package driver;

service TrackingService{
    rpc FindOne (DriverId) returns (Driver);
    rpc Follow (DriverId, FollowerId) returns (Response);
}

message DriverDTO {
    int32 id =1;
}

message Driver {
    int32 id = 1;
    int32 followersCount = 2;
}